--- a/src/index.css
+++ b/src/index.css
@@ -82,4 +82,15 @@
     background-color: hsl(var(--cta));
     color: hsl(var(--cta-foreground));
   }
+
+  /* Scroll animation used by InfiniteMovingCards */
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
+
+  .animate-scroll {
+    animation: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+  }
 }
